api-sepc, temporary admin page, route and api call
